🚀 APS v0.3 — Python SDK + TypeScript SDK + CI/CD
Python SDK (python/):
- 7 modules: crypto, passport, receipt, envelope, anchor, compat, conformance
- 33 tests passing, pycryptodome + cryptography deps
- Full 1:1 port of Go SDK

TypeScript SDK (typescript/):
- 8 modules: crypto, passport, receipt, envelope, anchor, compat, types, conformance
- 35 tests passing, @noble/hashes + @noble/ed25519 (zero-dep)
- Node.js 20+ and Deno compatible

CI/CD (.github/workflows/ci.yml):
- 4 jobs: go-sdk, python-sdk, typescript-sdk, cross-sdk-conformance
- Cross-SDK job runs after all 3 SDKs pass

Cross-SDK Conformance (tests/cross-sdk/):
- Bash script verifying Go/Python/TS produce identical hashes
- All 3 SDKs produce identical keccak256 outputs ✅

Test Vectors (spec/test-vectors.json):
- All placeholder values replaced with real computed hashes
- Fixed corrupted hex in keccak256-simple-passport
- 10/10 vectors now have concrete expected values

Author: Cezary Grotowski <c.grotowski@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,23 @@ go/vendor/
 *.test
 *.out
 
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+dist/
+build/
+.eggs/
+.pytest_cache/
+*.egg
+
+# TypeScript / Node
+node_modules/
+typescript/dist/
+*.js.map
+*.tsbuildinfo
+
 # IDE
 .vscode/
 .idea/
@@ -17,4 +34,3 @@ Thumbs.db
 
 # Build
 bin/
-dist/
