🏁 APS v1.0-rc1 — security audit, multi-chain, schema validation, RFC spec
Security Audit + Hardening:
- Timing-safe comparisons (constant-time) in all 3 SDKs
- 7 input validators (DID, hash, signature, timestamp, version, tier, attestation)
- 100+ security tests (10 attack vectors, canonical JSON edge cases)
- Report: docs/SECURITY-AUDIT.md

Multi-Chain Anchoring (v0.4):
- Ethereum provider (raw JSON-RPC, any EVM chain) — Go/Python/TS
- Arweave provider (raw HTTP + GraphQL) — Go/Python/TS
- §13 Attestation Exchange Protocol in spec
- W3C VC attestation create/verify/registry — Go/Python/TS

Schema Validation:
- JSON Schema validation in all 3 SDKs (jsonschema v5/ajv)
- validate() method on Passport/Receipt/Envelope classes
- fromJson() with optional schema validation
- 24+ validation edge case tests

RFC Internet-Draft:
- spec/draft-grotowski-aps-v1.md (54KB, 21 sections)
- Security Considerations (9 threat categories)
- IANA Considerations (3 media types)
- docs/IMPLEMENTATION-GUIDE.md (migration + pitfalls)

Author: Cezary Grotowski <c.grotowski@gmail.com>

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,22 +1,44 @@
 {
-  "name": "@APS/sdk",
-  "version": "0.1.0",
+  "name": "aps-sdk",
+  "version": "1.0.0",
+  "description": "Agent Passport Standard (APS) — TypeScript SDK",
+  "author": "Cezary Grotowski <c.grotowski@gmail.com>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cezexPL/agent-passport-standard.git",
+    "directory": "typescript"
+  },
+  "keywords": [
+    "agent",
+    "passport",
+    "identity",
+    "ai",
+    "trust",
+    "ed25519",
+    "keccak"
+  ],
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "files": [
+    "src/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest run"
   },
   "dependencies": {
+    "@noble/ed25519": "^2.2.3",
     "@noble/hashes": "^1.7.1",
-    "@noble/ed25519": "^2.2.3"
+    "ajv": "^8.18.0",
+    "ajv-formats": "^3.0.1"
   },
   "devDependencies": {
     "typescript": "^5.7.0",
