--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,19 +1,34 @@
-[build-system]
-requires = ["setuptools>=68.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "aps-sdk"
-version = "0.1.0"
-description = "Python SDK for the Agent Passport Standard"
+version = "1.0.0"
+description = "Agent Passport Standard (APS) — Python SDK"
+readme = "README.md"
+license = {text = "Apache-2.0"}
 requires-python = ">=3.10"
+authors = [{name = "Cezary Grotowski", email = "c.grotowski@gmail.com"}]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Topic :: Security :: Cryptography",
+]
 dependencies = [
     "pycryptodome>=3.20",
     "cryptography>=42.0",
+    "jsonschema>=4.20",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=8.0"]
+
+[build-system]
+requires = ["setuptools>=68.0"]
+build-backend = "setuptools.backends._legacy:_Backend"
+
+[project.urls]
+Homepage = "https://github.com/cezexPL/agent-passport-standard"
+Documentation = "https://github.com/cezexPL/agent-passport-standard/tree/main/python"
+Repository = "https://github.com/cezexPL/agent-passport-standard"
 
 [tool.setuptools.packages.find]
 include = ["aps*"]
