--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aps-sdk",
+  "name": "agent-passport-sdk",
   "version": "1.0.0",
-  "description": "Agent Passport Standard (APS) — TypeScript SDK",
+  "description": "Agent Passport Standard (APS) \u2014 TypeScript SDK",
   "author": "Cezary Grotowski <c.grotowski@gmail.com>",
   "license": "Apache-2.0",
   "repository": {
@@ -21,12 +21,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "types": "./src/index.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
-    "src/",
+    "dist/",
     "README.md",
     "LICENSE"
   ],
@@ -41,7 +41,10 @@
     "ajv-formats": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
-  }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts"
 }
