test: add comprehensive identity MCP server tests (11 pass), fix didToPublicKey slice bug

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "tsc && node --test dist/__tests__/*.test.js"
   },
   "keywords": ["mcp", "ai-agent", "identity", "did", "claude-code", "agent-passport", "ed25519"],
   "dependencies": {
